--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,25 @@
 #divComienzo{
     position:absolute;
-    width: 150px;
-    height: auto;
-    top: 20%;
-    bottom: 20%;
-    border: solid 1px;
-    border-left: none;
+    width: auto;
+    top: 10%;
+    bottom: 10%;
+    left: 30%;
+    right: 30%;
+    background: radial-gradient(circle, #ccccff 25%, white 40%);
+}
+
+.titulo{
+    font-size: 40px;
+    text-align: center;
+    padding-top: 42%;
+}
+
+.titulo1{
+    font-size: 20px;
+    text-align: center;
+}
+
+button{
+    margin: auto;
+    display: block;
 }
