--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,7 @@
     width: 125px;
     height: auto;
     top: 20%;
-    bottom: 20%;
+    height: auto;
     border-radius: 7px;
     border: solid 1px;
     z-index: 1;
@@ -146,6 +146,18 @@ button{
     border: solid 1px;
     background-color: white;
 }
+
+.divTabla{
+    position:absolute;
+    border-radius: 7px;
+    top: 35%;
+    left: 40%;
+    width: auto;
+    height: auto;
+    border: solid 1px;
+    background-color: white;
+}
+
 .footer{
   position: absolute;
   bottom: 0;
