--- a/estilos.css
+++ b/estilos.css
@@ -176,3 +176,12 @@ button{
 .footer p {
     color: white;
 }
+
+.formulario {
+    position:absolute;
+    border-radius: 7px;
+    width: auto;
+    height: auto;
+    border: solid 1px;
+    background-color: white;
+}
