Coloco menu contextual en la posicion del raton

--- a/estilos.css
+++ b/estilos.css
@@ -188,5 +188,9 @@ button{
 }
 
 .menuContextual {
-    
+    z-index: 1000;
+    position: absolute;
+    border: 1px solid;
+    width: auto;
+    height: auto;
 }
