--- a/estilos.css
+++ b/estilos.css
@@ -193,6 +193,16 @@ button{
     border: 1px solid;
     width: auto;
     height: auto;
-    padding: 10px;
+    padding: 5px;
     background-color: white;
 }
+
+.opciones{
+    margin-top: 5px;
+}
+
+/* .titulo{
+    position: absolute;
+
+    width: auto;
+} */
