--- a/estilos.css
+++ b/estilos.css
@@ -18,6 +18,7 @@
     border: solid 1px;
     z-index: 1;
     background-color:  #b3d9ff;
+    padding: 5px;
 }
 
 #botonCambio{
@@ -79,6 +80,7 @@ button{
     left: 40%;
     border: solid 1px;
     background-color: white;
+    padding: 10px;
 }
 
 .divEncabezado{
@@ -109,6 +111,7 @@ button{
     top: 35%;
     left: 40%;
     border: solid 1px;
+    padding: 10px;
     background-color: white;
 }
 
@@ -119,6 +122,7 @@ button{
     left: 38%;
     height: 165px;
     border: solid 1px;
+    padding: 10px;
     background-color: white;
 }
 
@@ -130,6 +134,7 @@ button{
     left: 40%;
     right: 40%;
     border: solid 1px;
+    padding: 10px;
     background-color: white;
 }
 
@@ -140,6 +145,7 @@ button{
     bottom: auto;
     left: 40%;
     border: solid 1px;
+    padding: 10px;
     background-color: white;
 }
 
@@ -150,6 +156,7 @@ button{
     bottom: auto;
     left: 40%;
     border: solid 1px;
+    padding: 10px;
     background-color: white;
 }
 
@@ -161,6 +168,7 @@ button{
     width: auto;
     height: auto;
     border: solid 1px;
+    padding: 10px;
     background-color: white;
 }
 
